microservices/users/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-ms # REPLACE ME
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-ms # REPLACE ME
  template:
    metadata:
      labels:
        app: users-ms # REPLACE ME
    spec:
      containers:
      - name: template # REPLACE ME
        image: registry.lognes.dev/microservices/users:master-1729198003 # {"$imagepolicy": "flux-system:users-policy"}
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
