microservices/users/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-ms-svc # REPLACE ME
  namespace: default
spec:
  selector:
    app: users-ms # REPLACE ME
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
